--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "frontend",
   "version": "1.0.0",
   "description": "",
-  "main": " signin.html",
+  "main": "index.html",
   "scripts": {
-    "start": "live-server signin.htm",
+    "start": "index.htm",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
     "live-server": "^1.2.1"
   },
   "dependencies": {
-    "axios": "^0.26.0"
+    "axios": "^0.26.0",
+    "http-server": "^14.1.0"
   }
 }
