--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,6 @@
-
-RewriteCond %{REQUEST_FILENAME}.html -f
-RewriteRule ^ %{REQUEST_URI}.html
+#remove html file extension https://frontend-flavio.herokuapp.com/page.html
+# to https://frontend-flavio.herokuapp.com/page
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
 
